Replacing html comments with jekyll comments  2

--- a/_includes/blocks/app-nav/app-nav-tab1.html
+++ b/_includes/blocks/app-nav/app-nav-tab1.html
@@ -10,7 +10,7 @@
   </div>
   {% include blocks/popup/ms-row-use-global-search.html%}
 </div>
-<!-- /.itemBox -->
+{% comment %} /.itemBox {% endcomment %}
 
 <div class="itemBox JS_appNavBox">
   {% for group in site.data.app-nav-tab1.groups %}
@@ -44,4 +44,4 @@
     </div>
   {% endfor %}
 </div>
-<!-- /.itemBox -->
+{% comment %} /.itemBox {% endcomment %}
