--- a/_includes/blocks/app-nav/app-nav-tab2.html
+++ b/_includes/blocks/app-nav/app-nav-tab2.html
@@ -9,7 +9,7 @@
     </ul>
   </div>
   {% include blocks/popup/ms-row-use-global-search.html%}
-</div><!-- /.itemBox -->
+</div>{% comment %} /.itemBox {% endcomment %}
 
 <div class="itemBox JS_appNavBox">
   {% for group in site.data.app-nav-tab2.groups %}
@@ -41,4 +41,4 @@
       </div>
     </div>
   {% endfor %}
-</div><!-- /.itemBox -->
+</div>{% comment %} /.itemBox {% endcomment %}
