--- a/_includes/blocks/itembox/itembox.html
+++ b/_includes/blocks/itembox/itembox.html
@@ -108,7 +108,7 @@
       </li>
     </ul>
     {% include blocks/itembox/itembox-inner.html %}
-    <!-- /.itemBox -->
+    {% comment %} /.itemBox {% endcomment %}
   </div>
 
   <div class="itemBox__row">
@@ -199,4 +199,4 @@
     </ul>
   </div>
 </div>
-<!-- /.itemBox -->
+{% comment %} /.itemBox {% endcomment %}
