--- a/_includes/components/tabs-panels.html
+++ b/_includes/components/tabs-panels.html
@@ -5,6 +5,6 @@
     {% for tab in tabsData %}
         <div class="tabs-panels__panel" tabindex="{{forloop.index}}">
           {{tab}}
-        </div><!-- /.tabs__panel -->
+        </div>{% comment %} /.tabs__panel {% endcomment %}
     {% endfor %}
-  </div><!-- /.tabs__panels -->
+  </div>{% comment %} /.tabs__panels {% endcomment %}
