--- a/_includes/javascript/selectedBlock.html
+++ b/_includes/javascript/selectedBlock.html
@@ -17,5 +17,5 @@
       ${selectedFilters}
     </div>
   </div>
-  <!-- /.itemBox selection-->
+  {% comment %} /.itemBox selection{% endcomment %}
 </div>
