--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -9,7 +9,7 @@
           </div>
         </li>
       </ul>
-      <!-- /.itemBox__rowInner -->
+      {% comment %} /.itemBox__rowInner {% endcomment %}
     </div>
   </div>
 
@@ -152,7 +152,7 @@
           </div>
         </div>
       </div>
-      <!-- /.itemBox -->
+      {% comment %} /.itemBox {% endcomment %}
     </div>
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
@@ -202,7 +202,7 @@
               </ul>
             </div>{% include blocks/popup/ms-row-create-new.html %}
           </div>
-          <!-- smart dates -->
+          {% comment %} smart dates {% endcomment %}
         </div>
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--item">
@@ -246,7 +246,7 @@
               {% include blocks/popup/calendar/ms-sublist-calendar.html %} {% include blocks/popup/ms-row-create-new.html %}
             </div>
           </div>
-          <!-- simple dates -->
+          {% comment %} simple dates {% endcomment %}
         </div>
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--item">
@@ -283,7 +283,7 @@
             </div>
             {% include blocks/popup/ms-row-create-new.html %}
           </div>
-          <!-- ranges -->
+          {% comment %} ranges {% endcomment %}
         </div>
         <div class="itemBox__row">
           <ul class="itemBox__rowInner itemBox__rowInner--item">
@@ -320,13 +320,13 @@
             </div>
             {% include blocks/popup/ms-row-create-new.html %}
           </div>
-          <!-- next last dates -->
+          {% comment %} next last dates {% endcomment %}
         </div>
       </div>
-      <!-- /.itemBox -->
+      {% comment %} /.itemBox {% endcomment %}
     </div>
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
