--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -205,7 +205,7 @@
         </div>
       </div>
     </div>
-    <!-- /.itemBox -->
+    {% comment %} /.itemBox {% endcomment %}
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
         <li class="itemBox__cell itemBox__cell--action JS_toggle">
@@ -329,9 +329,9 @@
         </div>
       </div>
     </div>
-    <!-- /.itemBox -->
+    {% comment %} /.itemBox {% endcomment %}
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
