--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -55,7 +55,7 @@
             {% endfor%}
           </div>
         </div>
-        <!-- /.itemBox -->
+        {% comment %} /.itemBox {% endcomment %}
       </div>
       <div class="itemBox__row">
         <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
@@ -127,13 +127,13 @@
                 {% endfor %}
               </div>
             </div>
-          <!-- /.itemBox -->
+          {% comment %} /.itemBox {% endcomment %}
           {% endfor %}
         </div>
-        <!-- /.itemBox -->
+        {% comment %} /.itemBox {% endcomment %}
       </div>
     </div>
-    <!-- /.itemBox -->
+    {% comment %} /.itemBox {% endcomment %}
   </div>
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
