--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -18,7 +18,7 @@
       </ul>
     </div>
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
   <div class="itemBox">
     <div class="itemBox__row">
@@ -69,7 +69,7 @@
       </ul>
     </div>
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
