--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -28,7 +28,7 @@
     {% endfor %}
     {% include blocks/popup/ms-row-load-more.html %}
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
