--- a/_includes/blocks/user-menu.html
+++ b/_includes/blocks/user-menu.html
@@ -25,6 +25,6 @@
         </div>
       {% endfor %}
     </div>
-    <!-- /.itemBox -->
+    {% comment %} /.itemBox {% endcomment %}
   {% endfor %}
 </div>
