--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -60,7 +60,7 @@
           {% endfor %}
         </div>
       </div>
-      <!-- /.itemBox -->
+      {% comment %} /.itemBox {% endcomment %}
     </div>
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--item JS_optionsTitle">
@@ -112,10 +112,10 @@
          </div>
       {% endfor %}
       </div>
-      <!-- /.itemBox -->
+      {% comment %} /.itemBox {% endcomment %}
     </div>
   </div>
-  <!-- /.itemBox -->
+  {% comment %} /.itemBox {% endcomment %}
 
 </div>
-<!-- /.multiSelector -->
+{% comment %} /.multiSelector {% endcomment %}
