--- a/_includes/blocks/extra-options/theme.html
+++ b/_includes/blocks/extra-options/theme.html
@@ -1,18 +1,18 @@
 <div class="px-4">
   <div class="field field--not-empty">
-    <div class="field__label">Background</div>
+    <div class="field__label">Theme</div>
     <div class="field__data">
       <div class="field__value">
         <div class="selector selector--singleselect selector--expanded selector--required JS_selector JS_extra">
           <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem" tabindex='0'>
             <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--field JS_background_light">Light</div>
+              <div class="selector__blockPart selector__blockPart--field JS_theme_normal">Normal</div>
             </div>
           </div>
           <div class="selector__itemSeperator"></div>
           <div class="selector__item JS_selectorItem" tabindex='0'>
             <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix JS_background_dark">Dark</div>
+              <div class="selector__blockPart selector__blockPart--prefix JS_theme_invert">Invert</div>
             </div>
           </div>
         </div>
@@ -22,10 +22,13 @@
 </div>
 
 <script>
-  $('.JS_background_light').on('click', function() {
-    $('body').css('background-color', 'white');
+  $('.JS_theme_normal').on('click', function() {
+    $('.tabs').removeClass('tabs--invert');
+    $('.selector, .push, .btn').removeClass('filter-invert');
   });
-  $('.JS_background_dark').on('click', function() {
-    $('body').css('background-color', '#343434');
+  $('.JS_theme_invert').on('click', function() {
+    $('.tabs').addClass('tabs--invert');
+    $('.selector, .push, .btn').addClass('filter-invert');
+    $('.JS_extra').removeClass('filter-invert');
   });
 </script>
