--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -1,11 +1,11 @@
-<div class="multiSelector JS_multiSelector--withFilter" id="filter-datepicker">
+<div class="modal JS_modal--withFilter" id="filter-datepicker">
 
   <div class="itemBox">
     <div class="itemBox__row">
       <ul class="itemBox__rowInner">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="search through dates">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput" placeholder="search through dates">
           </div>
         </li>
       </ul>
@@ -329,4 +329,4 @@
   {% comment %} /.itemBox {% endcomment %}
 
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
