--- a/_includes/popups/modal-columnpicker.html
+++ b/_includes/popups/modal-columnpicker.html
@@ -1,11 +1,11 @@
-<div class="multiSelector JS_multiSelector--simpleText JS_multiSelector--textAction JS_multiSelector--resetFunctionality JS_multiSelector--columnpickerOptions" id="multiSelector-columnpicker">
+<div class="modal JS_modal--simpleText JS_modal--textAction JS_modal--resetFunctionality JS_modal--columnpickerOptions" id="modal-columnpicker">
 
   <div class="itemBox JS_itemBox">
     <div class="itemBox__row">
       <ul class="itemBox__rowInner">
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="filter through columns">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput" placeholder="filter through columns">
           </div>
         </li>
       </ul>
@@ -136,4 +136,4 @@
     {% comment %} /.itemBox {% endcomment %}
   </div>
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
