--- a/_includes/popups/modal-tags-colors.html
+++ b/_includes/popups/modal-tags-colors.html
@@ -1,4 +1,4 @@
-<div class="multiSelector JS_multiSelector--withColors" id="multiSelector-tagpicker">
+<div class="modal JS_modal--withColors" id="modal-tagpicker">
 
   <div class="itemBox JS_itemBox ">
     <div class="itemBox__row">
@@ -6,7 +6,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
 
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="filter through tags">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput" placeholder="filter through tags">
 
           </div>
         </li>
@@ -118,4 +118,4 @@
   {% comment %} /.itemBox {% endcomment %}
 
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
