--- a/_includes/popups/popup-copy-clipboard.html
+++ b/_includes/popups/popup-copy-clipboard.html
@@ -1,4 +1,4 @@
-<div class="multiSelector" id="ms-copy-success">
+<div class="modal" id="ms-copy-success">
   <div class="itemBox">
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--custom">
@@ -15,7 +15,7 @@
 </div>
 
 
-<div class="multiSelector" id="ms-copy-error">
+<div class="modal" id="ms-copy-error">
   <div class="itemBox">
     <div class="itemBox__row">
       <ul class="itemBox__rowInner itemBox__rowInner--custom">
