--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -1,4 +1,4 @@
-<div class="multiSelector pin-r w-half-screen JS_semsearch">
+<div class="modal pin-r w-half-screen JS_semsearch">
 
   <div class="itemBox">
     <div class="itemBox__row">
@@ -6,7 +6,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
 
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="search through items">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput" placeholder="search through items">
 
           </div>
         </li>
@@ -72,4 +72,4 @@
   {% comment %} /.itemBox {% endcomment %}
 
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
