--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="multiSelector" id="multiSelector-breadcrumb">
+<div class="modal" id="modal-breadcrumb">
 
   <div class="itemBox JS_itemBox">
     <div class="itemBox__row">
@@ -6,7 +6,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
 
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput JS_Breadcrumb_Input" placeholder="filter through mijlpaal items">
 
           </div>
         </li>
@@ -31,4 +31,4 @@
   {% comment %} /.itemBox {% endcomment %}
 
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
