--- a/_layouts/itembox.html
+++ b/_layouts/itembox.html
@@ -11,9 +11,9 @@
   {{ content }}
 
   {% comment %} POPUPS {% endcomment %}
-  {% include popups/multiSelector-columnpicker.html %}
+  {% include popups/modal-columnpicker.html %}
 
-  <div class="multiSelector" id="multiSelector-error">
+  <div class="modal" id="modal-error">
     <div class="itemBox">
       <div class="itemBox__row">
         <ul class="itemBox__rowInner itemBox__rowInner--custom">
