--- a/sass/components.scss
+++ b/sass/components.scss
@@ -8,7 +8,7 @@
 @import "components/field.css";
 @import "components/headers.css";
 @import "components/itembox.css";
-@import "components/multiSelector.css";
+@import "components/modal.css";
 @import "components/note.css";
 @import "components/overlays.css";
 @import "components/progress.css";
