--- a/_includes/blocks/itembox/itembox-inner.html
+++ b/_includes/blocks/itembox/itembox-inner.html
@@ -7,7 +7,7 @@
         <button class="block-action disabled"></button>
         <button class="block-action">Print</button>
         <button class="block-action"></button>
-        <button class="block-action JS_has-popup" data-popid="#multiSelector-columnpicker"></button>
+        <button class="block-action JS_has-popup" data-popid="#modal-columnpicker"></button>
       </div>
     </header>
     <div class="itemBox__row">
