--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -1,4 +1,4 @@
-<div class="multiSelector JS_multiSelector--withFilter" id="filter-tagpicker">
+<div class="modal JS_modal--withFilter" id="filter-tagpicker">
 
   <div class="itemBox">
     <div class="itemBox__row">
@@ -6,7 +6,7 @@
         <li class="itemBox__cell">
           <div class="itemBox__cellInner">
 
-            <input type="search" class="itemBox__input itemBox__input--fluid JS_multiSelector__filterInput" placeholder="search through tags">
+            <input type="search" class="itemBox__input itemBox__input--fluid JS_modal__filterInput" placeholder="search through tags">
 
           </div>
         </li>
@@ -334,4 +334,4 @@
   {% comment %} /.itemBox {% endcomment %}
 
 </div>
-{% comment %} /.multiSelector {% endcomment %}
+{% comment %} /.modal {% endcomment %}
