multiselector -> modal rename 1

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -21,18 +21,18 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/singleselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 
-{% comment %} multiselect main{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-popup.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect-reset.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/multiselect.js"></script>
+{% comment %} modal main{% endcomment %}
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/popup.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/reset.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/modal.js"></script>
 
-{% comment %} multiselect plugins{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-animation.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-calendar.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-colorselector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-columnpicker-options.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-incl-excl-filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-reset-to-default.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sortable.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/multiselect/ms-sublist-closer.js"></script>
+{% comment %} modal plugins{% endcomment %}
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/animation.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-calendar.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-colorselector.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/ms-columnpicker-options.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/incl-excl-filter.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/reset-to-default.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/sortable.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/modal/sublist-closer.js"></script>
