added action state for itemBox__rowInner

--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -170,6 +170,14 @@
       }
     }
 
+    &--action {
+      .itemBox__cell {
+        &::before {
+          background-color: var(--color-gold);
+        }
+      }
+    }
+
     &--custom {
       height: auto;
 
