we dont use blue for tooltip popup

--- a/sass/components/overlays.scss
+++ b/sass/components/overlays.scss
@@ -28,7 +28,8 @@
   }
 
   &--tooltip {
-    background-color: rgba(210, 229, 255, 0.4);
+    // now we use the simple one
+    // background-color: rgba(210, 229, 255, 0.4);
   }
 
 }
