--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -65,6 +65,7 @@
       padding: 0;
       font-size: 0;
       left: 0;
+      overflow-x: hidden;
 
       li {
         position: relative;
@@ -143,6 +144,7 @@
 
         .tabs-nav__slideShadow {
           width: 150px;
+          pointer-events: inherit;
         }
       }
 
