--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -18,6 +18,7 @@
   background-color: var(--color-platinum);
   color: #000;
   box-shadow: 0 3px 0 #A5A5A5;
+  min-height: 28px;
 
   &:hover {
     transform: translatey(2px);
