specific class for aligned texts between buttons

--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -83,3 +83,10 @@
     }
   }
 }
+
+.aligned-text {
+  margin-left: .25rem;
+  margin-right: .25rem;
+  display: inline;
+  vertical-align: baseline;
+}
