--- a/_includes/blocks/itembox/itembox.html
+++ b/_includes/blocks/itembox/itembox.html
@@ -18,16 +18,52 @@
         </div>
       </li>
       <li class="itemBox__cell">
-        <div class="itemBox__cellInner"><input class="field__input" type="text" placeholder="Nr"></div>
+        <div class="itemBox__cellInner">
+          <div class="field">
+            <div class="field__label">Nr</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner"><input class="field__input" type="text" placeholder="Title"></div>
+        <div class="itemBox__cellInner">
+          <div class="field">
+            <div class="field__label">Title</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
       <li class="itemBox__cell flex-grow-2">
-        <div class="itemBox__cellInner"><input class="field__input" type="text" placeholder="Assigned to"></div>
+        <div class="itemBox__cellInner">
+          <div class="field">
+            <div class="field__label">Assigned to</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
-      <li class="itemBox__cell">
-        <div class="itemBox__cellInner"><input class="field__input" type="text" placeholder="Reported by customer"></div>
+      <li class="itemBox__cell flex-grow-3">
+        <div class="itemBox__cellInner">
+          <div class="field">
+            <div class="field__label">Reported by customer</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
+        </div>
       </li>
     </ul>
   </div>
