--- a/_includes/blocks/itembox/itembox-readonly.html
+++ b/_includes/blocks/itembox/itembox-readonly.html
@@ -30,12 +30,26 @@
       </li>
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
-          <input class="field__input" type="text" placeholder="header cell 1">
+          <div class="field">
+            <div class="field__label">header cell 1</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
         </div>
       </li>
       <li class="itemBox__cell flex-grow-2">
         <div class="itemBox__cellInner">
-          <input class="field__input" type="text" placeholder="header cell 2 with flex-grow-2">
+          <div class="field">
+            <div class="field__label">header cell 2 with flex-grow-2</div>
+            <div class="field__data">
+              <div class="field__value">
+                <input class="field__input" type="text" value="">
+              </div>
+            </div>
+          </div>
         </div>
       </li>
     </ul>
