--- a/sass/components/itembox.scss
+++ b/sass/components/itembox.scss
@@ -70,13 +70,24 @@
     &--thead {
       background: #D9D9D9;
       color: #808080;
-      height: 50px;
-      line-height: 40px;
+      height: 65px;
+      line-height: 60px;
       border-radius: 5px 5px 0 0;
       font-style: italic;
 
       .itemBox__cell {
         min-width: 40px;
+
+        &Inner {
+          padding-top: 0px;
+          padding-bottom: 0px;
+        }
+
+        .field {
+          .field__label {
+            line-height: normal;
+          }
+        }
       }
     }
 
